Fixing CINE dialog initial width and position on IE11

--- a/Packages/ohif-viewerbase/client/components/viewer/cineDialog/cineDialog.styl
+++ b/Packages/ohif-viewerbase/client/components/viewer/cineDialog/cineDialog.styl
@@ -4,12 +4,13 @@
   theme('border', '2px solid $uiBorderColor', 0.95)
   theme('background', '$uiGrayDarkest', 0.95)
   theme('color', '$textSecondaryColor')
-  position: absolute
   border-radius: 8px
-  z-index: 1000
-  overflow: hidden
   cursor: move
+  overflow: hidden
   padding: 0
+  position: absolute
+  width: 300px
+  z-index: 1000
 
   h5
     font-size: 20px
